# ISP-Customer-Churn-Prediction

./: README.md  isp-customer-churn.ipynb
customerchurn/: Makefile  pyproject.toml
customerchurn/customerchurn/: __init__.py  dataset.py  features.py  plots.py
customerchurn/customerchurn/modeling/: predict.py  train.py
customerchurn/docs/: mkdocs.yml
customerchurn/docs/docs/: index.md
